fixed stretching partially. still in progress.

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 html, body{
-  width: 100%;
+  width: 100vw;
   height: 100%;
   margin: 0;
 }
